Java Autumn 2021 - 19. Introduction to Database And SQL - Periodicals - switch all null checks to Optional